# raytracer-rs

./: .gitignore  Cargo.toml  camera.json  configuration.json  output.png.sb-59093927-QOH4ll
models/: cornell_box_VI.mtl
src/: bvh.rs  camera.rs  configuration.rs  helpers.rs  image.rs  lib.rs  light.rs  main.rs  raytracer.rs  renderer.rs  scene.rs
src/geometry/: mod.rs
src/light/: ambient_light.rs  area_light.rs  light_sample_context.rs  light_sampler.rs  mod.rs  point_light.rs
src/light/light_sampler/: base_sampler.rs  cumulative_distribution.rs  power_sampler.rs  uniform_sampler.rs
src/object/: bounding_box.rs  face.rs  intersection.rs  mesh.rs  mod.rs  ray.rs
src/rays/: mod.rs
src/shader/: ambient_shader.rs  better_path_tracer_shader.rs  distributed_shader.rs  mod.rs  path_tracer_shader.rs  whitted_shader.rs
