[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "raytracer_lib"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
indicatif = "0.17.8"
nalgebra = { version = "0.32.4", features = ["serde-serialize"] }
png = "0.17.13"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tobj = "4.0.1"
