[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "raytracer_lib"
path = "src/lib.rs"

[profile.release]
debug = true

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
nalgebra = { version = "0.32.4", features = ["serde-serialize"] }
png = "0.17.13"
rand = { version = "0.8.5", features = ["alloc"] }
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tobj = "4.0.1"
