[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "raytracer_lib"
path = "src/lib.rs"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.2", features = ["derive"] }
fastrand = "2.1.0"
image = "0.25.1"
nalgebra = { version = "0.32.4", features = ["serde-serialize"] }
rand = { version = "0.8.5", features = ["alloc", "std_rng"] }
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tobj = "4.0.1"
